examples/test/testpolicy1675.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1675
  namespace: namespace344
spec:
  podSelector:
    matchLabels:
      key34: value28
      key43: value9
      key6: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value0
      podSelector:
        matchLabels:
          key18: value12
